# nocode-kirun

./: .gitignore  LICENSE  README.md  Statements.xlsx
kirun-py/: README.md  pyproject.toml
kirun-py/src/kirun_py/: __init__.py  hybrid_repository.py
kirun-py/src/kirun_py/constant/: __init__.py  ki_run_constants.py
kirun-py/src/kirun_py/dsl/: __init__.py  dsl_compiler.py
kirun-py/src/kirun_py/exception/: __init__.py  execution_exception.py  ki_runtime_exception.py
kirun-py/src/kirun_py/function/: abstract_function.py  function_.py
kirun-py/src/kirun_py/json/: __init__.py  json_expression.py
kirun-py/src/kirun_py/model/: __init__.py  abstract_statement.py  argument.py  event.py  event_result.py  function_definition.py  function_output.py  function_output_generator.py  function_signature.py  parameter.py  parameter_reference.py  parameter_reference_type.py  parameter_type.py  position.py  statement.py  statement_group.py
kirun-py/src/kirun_py/namespaces/: __init__.py  namespaces.py
kirun-py/src/kirun_py/repository/: __init__.py  ki_run_function_repository.py  ki_run_schema_repository.py
kirun-py/src/kirun_py/runtime/: context_element.py  function_execution_parameters.py  ki_runtime.py  statement_execution.py  statement_message.py  statement_message_type.py
kirun-py/src/kirun_py/util/: __init__.py  array_util.py  deep_equal.py  duplicate.py  error_message_formatter.py  linked_list.py  map_util.py  null_check.py  tuples.py  uuid_.py  valid_date_time_util.py
kirun-py/tests/: conftest.py
kirun-py/tests/engine/runtime/: test_ki_runtime.py  (+3 more)
(+1513 files in other folders)
