[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirun-py"
version = "3.3.1"
description = "Python Runtime for Kinetic Instructions"
authors = [{ name = "Kiran Kumar Grandhi" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["python-dateutil>=2.8"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
